--- a/SCICompanionLib/SCICompanionLib.vcxproj.filters
+++ b/SCICompanionLib/SCICompanionLib.vcxproj.filters
@@ -1442,6 +1442,9 @@
     <ClInclude Include="Src\Resources\NounsAndCases.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Src\TernarySearchTree\TernarySearchTree.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="SCICompanionLib.def">
