- fix for opening LSL1 VGA

--- a/SCICompanionLib/SCICompanionLib.rc
+++ b/SCICompanionLib/SCICompanionLib.rc
@@ -1410,19 +1410,20 @@ FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     PUSHBUTTON      "Cancel",IDCANCEL,252,173,50,14
     CONTROL         "SCI 0",IDC_RADIOSCI0,"Button",BS_AUTORADIOBUTTON | WS_GROUP,23,20,33,10
-    CONTROL         "SCI 1.0",IDC_RADIOSCI1,"Button",BS_AUTORADIOBUTTON,23,34,40,10
-    CONTROL         "SCI 1.1",IDC_RADIOSCI6,"Button",BS_AUTORADIOBUTTON,23,48,40,10
-    GROUPBOX        "Resource map format",IDC_STATIC1,7,7,87,57,WS_GROUP
+    CONTROL         "SCI 0+",IDC_RADIOSCI0_1,"Button",BS_AUTORADIOBUTTON,23,34,39,10
+    CONTROL         "SCI 1.0",IDC_RADIOSCI1,"Button",BS_AUTORADIOBUTTON,23,48,40,10
+    CONTROL         "SCI 1.1",IDC_RADIOSCI6,"Button",BS_AUTORADIOBUTTON,23,63,40,10
+    GROUPBOX        "Resource map format",IDC_STATIC1,7,7,87,72,WS_GROUP
     CONTROL         "SCI0",IDC_RADIOSCI2,"Button",BS_AUTORADIOBUTTON | WS_GROUP,121,20,31,10
     CONTROL         "SCI1",IDC_RADIOSCI3,"Button",BS_AUTORADIOBUTTON,121,33,31,10
     GROUPBOX        "Compression format",IDC_STATIC2,110,7,80,46,WS_GROUP
     CONTROL         "SCI0",IDC_RADIOSCI4,"Button",BS_AUTORADIOBUTTON | WS_GROUP,216,19,31,10
     CONTROL         "SCI1",IDC_RADIOSCI5,"Button",BS_AUTORADIOBUTTON,216,33,31,10
     GROUPBOX        "Sound format",IDC_STATIC3,206,7,86,46,WS_GROUP
-    CONTROL         "SCI 0",IDC_RADIOSCI7,"Button",BS_AUTORADIOBUTTON | WS_GROUP,23,80,33,10
-    CONTROL         "SCI 1.0",IDC_RADIOSCI8,"Button",BS_AUTORADIOBUTTON,23,94,40,10
-    CONTROL         "SCI 1.1",IDC_RADIOSCI9,"Button",BS_AUTORADIOBUTTON,23,108,40,10
-    GROUPBOX        "Resource package fmt",IDC_STATIC6,7,67,87,57,WS_GROUP
+    CONTROL         "SCI 0",IDC_RADIOSCI7,"Button",BS_AUTORADIOBUTTON | WS_GROUP,23,96,33,10
+    CONTROL         "SCI 1.0",IDC_RADIOSCI8,"Button",BS_AUTORADIOBUTTON,23,110,40,10
+    CONTROL         "SCI 1.1",IDC_RADIOSCI9,"Button",BS_AUTORADIOBUTTON,23,124,40,10
+    GROUPBOX        "Resource package fmt",IDC_STATIC6,7,83,87,57,WS_GROUP
     CONTROL         "Has palette",IDC_CHECK1,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,110,135,53,8
     CONTROL         "Grayscale cursor",IDC_CHECK4,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,206,108,69,10
     CONTROL         "SCI1 code",IDC_CHECK5,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,206,121,49,10
