--- a/SCICompanionLib/SCICompanionLib.vcxproj.filters
+++ b/SCICompanionLib/SCICompanionLib.vcxproj.filters
@@ -684,6 +684,9 @@
     <ClCompile Include="Src\Util\Task.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Src\Util\TokenDatabase.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="SCICompanionLib.h">
@@ -1445,9 +1448,6 @@
     <ClInclude Include="Src\Resources\NounsAndCases.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Src\TernarySearchTree\TernarySearchTree.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="Src\Compile\AutoCompleteContext.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -1455,6 +1455,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Src\Util\Task.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\Util\TokenDatabase.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
