- first steps towards being able to open audio sync resources

--- a/SCICompanionLib/SCICompanionLib.rc
+++ b/SCICompanionLib/SCICompanionLib.rc
@@ -1666,6 +1666,10 @@ BEGIN
     LTEXT           "Message text:",IDC_STATIC2,172,11,47,8
     PUSHBUTTON      "Commit",IDC_BUTTONCOMMIT,232,7,50,14
     PUSHBUTTON      "Add new",IDC_BUTTONADDNEW,7,7,42,14
+    EDITTEXT        IDC_EDIT_SAMPLEBIT,412,7,80,14,ES_AUTOHSCROLL | ES_READONLY
+    PUSHBUTTON      "8",IDC_BUTTON_PLAY2,307,7,19,14
+    PUSHBUTTON      "g",IDC_BUTTON_STOP,330,7,19,14
+    CONTROL         "Auto preview",IDC_CHECK_AUTOPREV,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,354,8,53,10
 END
 
 IDD_DIALOGGRADIENTS DIALOGEX 0, 0, 117, 108
