- factor out audio playback code so it can be re-used in message editor

--- a/SCICompanionLib/SCICompanionLib.rc
+++ b/SCICompanionLib/SCICompanionLib.rc
@@ -1649,7 +1649,7 @@ IDD_MESSAGEEDIT DIALOGEX 0, 0, 499, 118
 STYLE DS_SETFONT | DS_FIXEDSYS | WS_CHILD | WS_VISIBLE | WS_CLIPCHILDREN | WS_SYSMENU
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    EDITTEXT        IDC_EDITMESSAGE,169,24,323,87,ES_MULTILINE | ES_AUTOHSCROLL | ES_WANTRETURN
+    EDITTEXT        IDC_EDITMESSAGE,169,24,209,87,ES_MULTILINE | ES_AUTOHSCROLL | ES_WANTRETURN
     PUSHBUTTON      "Clone",IDC_BUTTONCLONE,58,7,42,14
     PUSHBUTTON      "Add sequence",IDC_BUTTONADDSEQ,104,7,59,14
     RTEXT           "Noun:",IDC_STATIC3,7,28,42,8
@@ -1666,10 +1666,13 @@ BEGIN
     LTEXT           "Message text:",IDC_STATIC2,172,11,47,8
     PUSHBUTTON      "Commit",IDC_BUTTONCOMMIT,232,7,50,14
     PUSHBUTTON      "Add new",IDC_BUTTONADDNEW,7,7,42,14
-    EDITTEXT        IDC_EDIT_SAMPLEBIT,412,7,80,14,ES_AUTOHSCROLL | ES_READONLY
-    PUSHBUTTON      "8",IDC_BUTTON_PLAY2,307,7,19,14
-    PUSHBUTTON      "g",IDC_BUTTON_STOP,330,7,19,14
-    CONTROL         "Auto preview",IDC_CHECK_AUTOPREV,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,354,8,53,10
+    EDITTEXT        IDC_EDIT_SAMPLEBIT,383,55,109,14,ES_AUTOHSCROLL | ES_READONLY
+    PUSHBUTTON      "8",IDC_BUTTON_PLAY2,383,7,19,14
+    PUSHBUTTON      "g",IDC_BUTTON_STOP,403,7,19,14
+    CONTROL         "",IDC_SLIDER,"msctls_trackbar32",WS_TABSTOP,426,7,66,15
+    CONTROL         "Auto preview",IDC_CHECK_AUTOPREV,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,430,26,54,10
+    LTEXT           "Duration:",IDC_STATIC_DURATION,386,42,106,8
+    PUSHBUTTON      "&Browse for .wav",IDC_BUTTONBROWSE,426,73,66,14
 END
 
 IDD_DIALOGGRADIENTS DIALOGEX 0, 0, 117, 108
@@ -1724,7 +1727,7 @@ STYLE DS_SETFONT | DS_FIXEDSYS | WS_CHILD | WS_CLIPCHILDREN | WS_SYSMENU
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     EDITTEXT        IDC_EDIT_SAMPLEBIT,7,82,139,14,ES_AUTOHSCROLL | ES_READONLY
-    PUSHBUTTON      "8",IDC_BUTTON_PLAY,7,34,19,14
+    PUSHBUTTON      "8",IDC_BUTTON_PLAY2,7,34,19,14
     PUSHBUTTON      "g",IDC_BUTTON_STOP,27,34,19,14
     CONTROL         "",IDC_SLIDER,"msctls_trackbar32",WS_TABSTOP,52,34,94,15
     CONTROL         "Auto preview",IDC_CHECK_AUTOPREV,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,53,131,10
