- support for recording audio via microphone

--- a/SCICompanionLib/SCICompanionLib.rc
+++ b/SCICompanionLib/SCICompanionLib.rc
@@ -1673,6 +1673,8 @@ BEGIN
     CONTROL         "Auto preview",IDC_CHECK_AUTOPREV,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,430,26,54,10
     LTEXT           "Duration:",IDC_STATIC_DURATION,386,42,106,8
     PUSHBUTTON      "&Browse for .wav",IDC_BUTTONBROWSE,426,73,66,14
+    PUSHBUTTON      "n",IDC_BUTTON_RECORD,473,90,19,14
+    COMBOBOX        IDC_COMBO_WAVEFORMAT,385,90,83,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
 END
 
 IDD_DIALOGGRADIENTS DIALOGEX 0, 0, 117, 108
@@ -1735,6 +1737,8 @@ BEGIN
     EDITTEXT        IDC_EDIT_DESCRIPTION,7,99,139,56,ES_MULTILINE | ES_READONLY
     PUSHBUTTON      "&Browse for .wav",IDC_BUTTONBROWSE,7,162,69,14
     LTEXT           "Audio resources are short wav-based resources used for sound effects.",IDC_STATICTITLE,7,7,139,22
+    PUSHBUTTON      "n",IDC_BUTTON_RECORD,95,180,19,14
+    COMBOBOX        IDC_COMBO_WAVEFORMAT,7,181,83,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
 END
 
 IDD_CONVERTTOPALETTE DIALOGEX 0, 0, 151, 69
@@ -2531,6 +2535,32 @@ BEGIN
 0x0065, 
     IDC_COMBODITHERALPHA, 0x403, 15, 0
 0x724f, 0x6564, 0x6572, 0x2064, 0x6964, 0x6874, 0x7265, "\000" 
+    0
+END
+
+IDD_MESSAGEEDIT DLGINIT
+BEGIN
+    IDC_COMBO_WAVEFORMAT, 0x403, 15, 0
+0x3131, 0x3230, 0x4835, 0x2c7a, 0x3820, 0x6220, 0x7469, "\000" 
+    IDC_COMBO_WAVEFORMAT, 0x403, 16, 0
+0x3131, 0x3230, 0x4835, 0x2c7a, 0x3120, 0x2036, 0x6962, 0x0074, 
+    IDC_COMBO_WAVEFORMAT, 0x403, 15, 0
+0x3232, 0x3530, 0x4830, 0x2c7a, 0x3820, 0x6220, 0x7469, "\000" 
+    IDC_COMBO_WAVEFORMAT, 0x403, 16, 0
+0x3232, 0x3530, 0x4830, 0x2c7a, 0x3120, 0x2036, 0x6962, 0x0074, 
+    0
+END
+
+IDD_PREVIEWAUDIO DLGINIT
+BEGIN
+    IDC_COMBO_WAVEFORMAT, 0x403, 15, 0
+0x3131, 0x3230, 0x4835, 0x2c7a, 0x3820, 0x6220, 0x7469, "\000" 
+    IDC_COMBO_WAVEFORMAT, 0x403, 16, 0
+0x3131, 0x3230, 0x4835, 0x2c7a, 0x3120, 0x2036, 0x6962, 0x0074, 
+    IDC_COMBO_WAVEFORMAT, 0x403, 15, 0
+0x3232, 0x3530, 0x4830, 0x2c7a, 0x3820, 0x6220, 0x7469, "\000" 
+    IDC_COMBO_WAVEFORMAT, 0x403, 16, 0
+0x3232, 0x3530, 0x4830, 0x2c7a, 0x3120, 0x2036, 0x6962, 0x0074, 
     0
 END
 
