- fixes for message audio

--- a/SCICompanionLib/SCICompanionLib.rc
+++ b/SCICompanionLib/SCICompanionLib.rc
@@ -2504,6 +2504,8 @@ BEGIN
 0x612e, 0x6475, "\000" 
     IDC_COMBO3, 0x403, 5, 0
 0x732e, 0x7866, "\000" 
+    IDC_COMBO3, 0x403, 8, 0
+0x7561, 0x2f64, 0x6673, 0x0078, 
     0
 END
 
