--- a/SCICompanionLib/SCICompanionLib.vcxproj.filters
+++ b/SCICompanionLib/SCICompanionLib.vcxproj.filters
@@ -1379,9 +1379,6 @@
     <ClInclude Include="Src\Util\CustomMessageBox.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Src\Resources\SyncResourceMap.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="Src\Resources\Polygon.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -1473,6 +1470,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Src\Util\AudioRecording.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\Resources\ResourceMapEvents.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
