- icons in message editor to indicate audio/lipsync - sorting in message editor columns - word wrap fix to message editor

--- a/SCICompanionLib/SCICompanionLib.vcxproj
+++ b/SCICompanionLib/SCICompanionLib.vcxproj
@@ -734,6 +734,7 @@
     <Image Include="res\bitmap1.bmp" />
     <Image Include="res\bitmapcu.bmp" />
     <Image Include="res\bitmaplo.bmp" />
+    <Image Include="res\bitmapob.bmp" />
     <Image Include="res\bitmapup.bmp" />
     <Image Include="res\bmp00001.bmp" />
     <Image Include="res\bmp00002.bmp" />
