--- a/SCICompanionLib/SCICompanionLib.vcxproj.filters
+++ b/SCICompanionLib/SCICompanionLib.vcxproj.filters
@@ -2019,5 +2019,8 @@
     <Image Include="res\RightArrow.ico">
       <Filter>Resource Files</Filter>
     </Image>
+    <Image Include="res\bitmapob.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
   </ItemGroup>
 </Project>
