- reduce size of resources (reduce binary size)

--- a/Prof-UIS.2.92/Include/Resources/Res2010office/Res2010office.rc
+++ b/Prof-UIS.2.92/Include/Resources/Res2010office/Res2010office.rc
@@ -73,6 +73,7 @@ IDB_EXT_2010_OFFICE_BUTTON_R1_LEFT_PART                     BITMAP  MOVEABLE PUR
 IDB_EXT_2010_OFFICE_BUTTON_R1_RIGHT_PART                    BITMAP  MOVEABLE PURE "Resources\\Res2010office\\IDB_EXT_2010_OFFICE_BUTTON_R1_RIGHT_PART.bmp"
 IDB_EXT_2010_OFFICE_BUTTON_R1_SIMPLE                        BITMAP  MOVEABLE PURE "Resources\\Res2010office\\IDB_EXT_2010_OFFICE_BUTTON_R1_SIMPLE.bmp"
 
+#if (!defined __EXT_MFC_NO_RIBBON_RES)
 IDB_EXT_2010_OFFICE_RIBBON_PAGE_BK_R1                       BITMAP  MOVEABLE PURE "Resources\\Res2010office\\IDB_EXT_2010_OFFICE_RIBBON_PAGE_BK_R1.bmp"
 
 IDB_EXT_2010_OFFICE_RIBBON_GROUP_COLLAPSED_HOVER_BK_R1      BITMAP  MOVEABLE PURE "Resources\\Res2010office\\IDB_EXT_2010_OFFICE_RIBBON_GROUP_COLLAPSED_HOVER_BK_R1.bmp"
@@ -83,6 +84,7 @@ IDB_EXT_2010_OFFICE_RIBBON_GROUP_EXPANDED_NORMAL_BK_R1      BITMAP  MOVEABLE PUR
 
 IDB_EXT_2010_OFFICE_RIBBON_SEPARATOR_H_R1                   BITMAP  MOVEABLE PURE "Resources\\Res2010office\\IDB_EXT_2010_OFFICE_RIBBON_SEPARATOR_H_R1.bmp"
 IDB_EXT_2010_OFFICE_RIBBON_SEPARATOR_V_R1                   BITMAP  MOVEABLE PURE "Resources\\Res2010office\\IDB_EXT_2010_OFFICE_RIBBON_SEPARATOR_V_R1.bmp"
+#endif
 
 IDB_EXT_2010_OFFICE_QATB_CEB_R1                             BITMAP  MOVEABLE PURE "Resources\\Res2010office\\IDB_EXT_2010_OFFICE_QATB_CEB_R1.bmp"
 
@@ -111,6 +113,7 @@ IDB_EXT_2010_OFFICE_RIBBON_TB_SEPARATOR_HOVER_R1            BITMAP  MOVEABLE PUR
 
 IDB_EXT_2010_OFFICE_RESIZING_GRIPPER_R1                     BITMAP  MOVEABLE PURE "Resources\\Res2010office\\IDB_EXT_2010_OFFICE_RESIZING_GRIPPER_R1.bmp"
 
+#if (!defined __EXT_MFC_NO_RIBBON_RES)
 IDB_EXT_2010_OFFICE_RIBBON_FILE_BUTTON                      BITMAP  MOVEABLE PURE "Resources\\Res2010office\\IDB_EXT_2010_OFFICE_RIBBON_FILE_BUTTON.bmp"
 
 IDB_EXT_2010_OFFICE_RIBBON_TAB_AREA_DWM_BLUR                BITMAP  MOVEABLE PURE "Resources\\Res2010office\\IDB_EXT_2010_OFFICE_RIBBON_TAB_AREA_DWM_BLUR.bmp"
@@ -118,6 +121,7 @@ IDB_EXT_2010_OFFICE_RIBBON_TAB_AREA_DWM_BLUR                BITMAP  MOVEABLE PUR
 IDB_EXT_2010_OFFICE_RIBBON_GROUP_BUTTON_QATB_NORMAL_BK_R1   BITMAP  MOVEABLE PURE "Resources\\Res2010office\\IDB_EXT_2010_OFFICE_RIBBON_GROUP_BUTTON_QATB_NORMAL_BK_R1.bmp"
 IDB_EXT_2010_OFFICE_RIBBON_GROUP_BUTTON_QATB_HOVER_BK_R1    BITMAP  MOVEABLE PURE "Resources\\Res2010office\\IDB_EXT_2010_OFFICE_RIBBON_GROUP_BUTTON_QATB_HOVER_BK_R1.bmp"
 IDB_EXT_2010_OFFICE_RIBBON_GROUP_BUTTON_QATB_PRESSED_BK_R1  BITMAP  MOVEABLE PURE "Resources\\Res2010office\\IDB_EXT_2010_OFFICE_RIBBON_GROUP_BUTTON_QATB_PRESSED_BK_R1.bmp"
+#endif
 
 IDB_EXT_2010_OFFICE_RM_BIG_BORDER_R1                        BITMAP  MOVEABLE PURE "Resources\\Res2010office\\IDB_EXT_2010_OFFICE_RM_BIG_BORDER_R1.bmp"
 IDB_EXT_2010_OFFICE_RM_BIG_BORDER_R2_BLUE                   BITMAP  MOVEABLE PURE "Resources\\Res2010office\\IDB_EXT_2010_OFFICE_RM_BIG_BORDER_R2_BLUE.bmp"
@@ -152,6 +156,8 @@ IDB_EXT_2010_OFFICE_NC_FRAME_ACTIVE_R2_SILVER                         BITMAP  MO
 IDB_EXT_2010_OFFICE_NC_FRAME_INACTIVE_R2_BLACK                        BITMAP  MOVEABLE PURE "Resources\\Res2010office\\IDB_EXT_2010_OFFICE_NC_FRAME_INACTIVE_R2_BLACK.bmp"
 IDB_EXT_2010_OFFICE_NC_FRAME_INACTIVE_R2_BLUE                         BITMAP  MOVEABLE PURE "Resources\\Res2010office\\IDB_EXT_2010_OFFICE_NC_FRAME_INACTIVE_R2_BLUE.bmp"
 IDB_EXT_2010_OFFICE_NC_FRAME_INACTIVE_R2_SILVER                       BITMAP  MOVEABLE PURE "Resources\\Res2010office\\IDB_EXT_2010_OFFICE_NC_FRAME_INACTIVE_R2_SILVER.bmp"
+
+#if (!defined __EXT_MFC_NO_RIBBON_RES)
 IDB_EXT_2010_OFFICE_RIBBON_GROUP_BUTTON_QATB_HOVER_BK_R2_BLACK        BITMAP  MOVEABLE PURE "Resources\\Res2010office\\IDB_EXT_2010_OFFICE_RIBBON_GROUP_BUTTON_QATB_HOVER_BK_R2_BLACK.bmp"
 IDB_EXT_2010_OFFICE_RIBBON_GROUP_BUTTON_QATB_HOVER_BK_R2_BLUE         BITMAP  MOVEABLE PURE "Resources\\Res2010office\\IDB_EXT_2010_OFFICE_RIBBON_GROUP_BUTTON_QATB_HOVER_BK_R2_BLUE.bmp"
 IDB_EXT_2010_OFFICE_RIBBON_GROUP_BUTTON_QATB_HOVER_BK_R2_SILVER       BITMAP  MOVEABLE PURE "Resources\\Res2010office\\IDB_EXT_2010_OFFICE_RIBBON_GROUP_BUTTON_QATB_HOVER_BK_R2_SILVER.bmp"
@@ -179,6 +185,8 @@ IDB_EXT_2010_OFFICE_RIBBON_GROUP_EXPANDED_NORMAL_BK_R2_SILVER         BITMAP  MO
 IDB_EXT_2010_OFFICE_RIBBON_PAGE_BK_R2_BLACK                           BITMAP  MOVEABLE PURE "Resources\\Res2010office\\IDB_EXT_2010_OFFICE_RIBBON_PAGE_BK_R2_BLACK.bmp"
 IDB_EXT_2010_OFFICE_RIBBON_PAGE_BK_R2_BLUE                            BITMAP  MOVEABLE PURE "Resources\\Res2010office\\IDB_EXT_2010_OFFICE_RIBBON_PAGE_BK_R2_BLUE.bmp"
 IDB_EXT_2010_OFFICE_RIBBON_PAGE_BK_R2_SILVER                          BITMAP  MOVEABLE PURE "Resources\\Res2010office\\IDB_EXT_2010_OFFICE_RIBBON_PAGE_BK_R2_SILVER.bmp"
+#endif
+
 IDB_EXT_2010_OFFICE_STATUSBAR_BK_DARK_R2_BLACK                        BITMAP  MOVEABLE PURE "Resources\\Res2010office\\IDB_EXT_2010_OFFICE_STATUSBAR_BK_DARK_R2_BLACK.bmp"
 IDB_EXT_2010_OFFICE_STATUSBAR_BK_DARK_R2_BLUE                         BITMAP  MOVEABLE PURE "Resources\\Res2010office\\IDB_EXT_2010_OFFICE_STATUSBAR_BK_DARK_R2_BLUE.bmp"
 IDB_EXT_2010_OFFICE_STATUSBAR_BK_DARK_R2_SILVER                       BITMAP  MOVEABLE PURE "Resources\\Res2010office\\IDB_EXT_2010_OFFICE_STATUSBAR_BK_DARK_R2_SILVER.bmp"
@@ -373,7 +381,7 @@ IDB_EXT_2010_TAB_AREA_BK_GRAY                                                   
 
 
 
-IDB_EXT_BSV_BACKGROUND_2010_R1                                                     BITMAP MOVEABLE PURE "Resources\\Res2010office\\BackstageView\\IDB_EXT_BSV_BACKGROUND_2010_R1.bmp"
+//IDB_EXT_BSV_BACKGROUND_2010_R1                                                     BITMAP MOVEABLE PURE "Resources\\Res2010office\\BackstageView\\IDB_EXT_BSV_BACKGROUND_2010_R1.bmp"
 IDB_EXT_BSV_TOP_LEVEL_TAB_ITEM_HOVER_2010_R1                                       BITMAP MOVEABLE PURE "Resources\\Res2010office\\BackstageView\\IDB_EXT_BSV_TOP_LEVEL_TAB_ITEM_HOVER_2010_R1.bmp"
 IDB_EXT_BSV_TOP_LEVEL_TAB_ITEM_SELECTED_2010_R1                                    BITMAP MOVEABLE PURE "Resources\\Res2010office\\BackstageView\\IDB_EXT_BSV_TOP_LEVEL_TAB_ITEM_SELECTED_2010_R1.bmp"
 IDB_EXT_BSV_TOP_LEVEL_TAB_ITEM_FOCUSED_2010_R1                                     BITMAP MOVEABLE PURE "Resources\\Res2010office\\BackstageView\\IDB_EXT_BSV_TOP_LEVEL_TAB_ITEM_FOCUSED_2010_R1.bmp"
