--- a/SCICompanion/SCICompanion.rc
+++ b/SCICompanion/SCICompanion.rc
@@ -49,8 +49,8 @@ BEGIN
     "#include ""res\\SCICompanion.rc2""  // non-Microsoft Visual C++ edited resources\r\n"
     "#include ""afxres.rc""      // Standard components\r\n"
     "#if !defined(_AFXDLL)\r\n"
-    "#include ""afxprint.rc""        // printing/print preview resources\r\n"
-    "#include ""afxribbon.rc""        // MFC ribbon and control bar resources\r\n"
+    "//#include ""afxprint.rc""        // printing/print preview resources\r\n"
+    "//#include ""afxribbon.rc""        // MFC ribbon and control bar resources\r\n"
     "#endif\r\n"
     "#endif\r\n"
     "\0"
@@ -136,8 +136,8 @@ LANGUAGE 9, 1
 #include "res\\SCICompanion.rc2"  // non-Microsoft Visual C++ edited resources
 #include "afxres.rc"      // Standard components
 #if !defined(_AFXDLL)
-#include "afxprint.rc"        // printing/print preview resources
-#include "afxribbon.rc"        // MFC ribbon and control bar resources
+//#include "afxprint.rc"        // printing/print preview resources
+//#include "afxribbon.rc"        // MFC ribbon and control bar resources
 #endif
 #endif
 #endif    // not APSTUDIO_INVOKED
