--- a/SCICompanionLib/SCICompanionLib.rc
+++ b/SCICompanionLib/SCICompanionLib.rc
@@ -1676,6 +1676,7 @@ BEGIN
     PUSHBUTTON      "&Browse for .wav",IDC_BUTTONBROWSE,426,73,66,14
     PUSHBUTTON      "n",IDC_BUTTON_RECORD,473,90,19,14
     COMBOBOX        IDC_COMBO_WAVEFORMAT,385,90,83,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
+    PUSHBUTTON      "Lip sync",IDC_BUTTONLIPSYNC,385,73,38,14
 END
 
 IDD_DIALOGGRADIENTS DIALOGEX 0, 0, 117, 108
@@ -1809,6 +1810,16 @@ BEGIN
     PUSHBUTTON      "ï",IDC_BUTTONLEFT,232,122,15,11
     PUSHBUTTON      "ð",IDC_BUTTONRIGHT,264,122,15,11
     PUSHBUTTON      "ò",IDC_BUTTONDOWN,248,128,15,11
+END
+
+IDD_LIPSYNCDIALOG DIALOGEX 0, 0, 186, 62
+STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
+CAPTION "Extract lip sync information"
+FONT 8, "MS Shell Dlg", 400, 0, 0x1
+BEGIN
+    PUSHBUTTON      "Cancel",IDCANCEL,129,41,50,14
+    CONTROL         "",IDC_PROGRESS,"msctls_progress32",WS_BORDER,7,7,172,14
+    EDITTEXT        IDC_EDIT,7,23,172,14,ES_AUTOHSCROLL | ES_READONLY
 END
 
 
@@ -2444,6 +2455,14 @@ BEGIN
         VERTGUIDE, 226
         TOPMARGIN, 7
         BOTTOMMARGIN, 230
+    END
+
+    IDD_LIPSYNCDIALOG, DIALOG
+    BEGIN
+        LEFTMARGIN, 7
+        RIGHTMARGIN, 179
+        TOPMARGIN, 7
+        BOTTOMMARGIN, 55
     END
 END
 #endif    // APSTUDIO_INVOKED
