--- a/SCICompanionLib/SCICompanionLib.rc
+++ b/SCICompanionLib/SCICompanionLib.rc
@@ -1650,7 +1650,7 @@ IDD_MESSAGEEDIT DIALOGEX 0, 0, 499, 118
 STYLE DS_SETFONT | DS_FIXEDSYS | WS_CHILD | WS_VISIBLE | WS_CLIPCHILDREN | WS_SYSMENU
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    EDITTEXT        IDC_EDITMESSAGE,169,24,209,87,ES_MULTILINE | ES_WANTRETURN
+    EDITTEXT        IDC_EDITMESSAGE,169,24,148,87,ES_MULTILINE | ES_WANTRETURN
     PUSHBUTTON      "Clone",IDC_BUTTONCLONE,58,7,42,14
     PUSHBUTTON      "Add sequence",IDC_BUTTONADDSEQ,104,7,59,14
     RTEXT           "Noun:",IDC_STATIC3,7,28,42,8
@@ -1677,6 +1677,7 @@ BEGIN
     PUSHBUTTON      "n",IDC_BUTTON_RECORD,473,90,19,14
     COMBOBOX        IDC_COMBO_WAVEFORMAT,385,90,83,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
     PUSHBUTTON      "Lip sync",IDC_BUTTONLIPSYNC,385,73,38,14
+    CONTROL         "",IDC_ANIMATE,"Static",SS_OWNERDRAW,336,65,44,37
 END
 
 IDD_DIALOGGRADIENTS DIALOGEX 0, 0, 117, 108
